# MonstarLab_Internship

./: README.md
poetry_demo/demo/: README.md  pyproject.toml
poetry_demo/demo/src/demo/: app.py
poetry_demo/demo/src/demo/static/: script.js  style.css
poetry_demo/demo/src/demo/templates/: index.html
